--- a/src/App.css
+++ b/src/App.css
@@ -17,16 +17,13 @@
   color: #09d3ac;
 }
 
-#background-img {
-  position: fixed;
-  top: 0;
-  left: 0;
+.ui.menu {
+  border-radius: 0 !important;
+}
 
-  /* Preserve aspect ratio */
-  min-width: 100vh;
-  min-height: 100vh;
-  width: 100%;
-  height: auto;
-  opacity: 0.06;
-  z-index: -10;
+#particles-background {
+  position : absolute;
+  width:100%;
+  height:100%;
+  z-index:-1;
 }
